Add description for all pages

--- a/projects/IHM/app/programmeMenu/programmeTab/programmeTab.html
+++ b/projects/IHM/app/programmeMenu/programmeTab/programmeTab.html
@@ -4,7 +4,7 @@
 
 <div ng-controller="programmeTabCtrl">
   <p>
-    Sur cette page, définissez quels enseignements sont associés à quels niveaux et en quelles quantités.
+    Rentrez, pour chaque niveau et matières, le nombre de crénaux horaires hebdomadaires de cette matière pour ce niveau.
     <br/><br/>Exemple : 3ème, Français 3h, Maths 3h, EPS 2h...
   </p>
 
