--- a/projects/IHM/app/schoolInformationMenu/scheduleTab/scheduleTab.html
+++ b/projects/IHM/app/schoolInformationMenu/scheduleTab/scheduleTab.html
@@ -4,6 +4,8 @@
 <div ng-controller="scheduleTabCtrl">
   <p>
     Rentrez les horaires de cours de l'établissement (ex: 8h05 - 9h00 ; 9h05 - 10h00...)
+    <br/> Ensuite, décochez les horaires lorsque l'établissement est fermé (mercredi après-midi par exemple).
+    <br/> Vous pouvez cliquer sur la case en entête de colonne pour sélectionner ou désélectionner un jour entier.
   </p>
   <table class="framedTable">
     <tr>
