--- a/projects/IHM/app/schoolInformationMenu/roomTypeTab/roomTypeTab.html
+++ b/projects/IHM/app/schoolInformationMenu/roomTypeTab/roomTypeTab.html
@@ -6,6 +6,7 @@
 	  <p>
 		  Ajoutez/supprimez des types de salles, qui correspondent à un ensemble de salles dans lesquelles les mêmes cours peuvent avoir lieu. La capacité de la salle n'est pas à prendre en compte.
 		  <br/><br/> Exemple : amphithéâtres, salle de travaux dirigés, salle avec vidéoprojecteur, salle de TP Chimie...
+      <br/> Une fois qu'au moins un type de salle sera rentré, vous aurez accès aux onglets "Salles" et "Matières".
 	  </p>
 
 	  <table id="roomTypeTable" class="framedTable">
