server OK avec connect

--- a/projects/IHM/app/anchoredParts/body.html
+++ b/projects/IHM/app/anchoredParts/body.html
@@ -87,9 +87,9 @@
         </fieldset>
     </div>
 
-    <div id="overlayWait" class="bodyOverlay" ng-controller="homeMenuCtrl">
+    <!--<div id="overlayWait" class="bodyOverlay" ng-controller="homeMenuCtrl">
         <md-progress-circular md-mode="indeterminate" md-diameter="150px" style="margin-left: 40%; margin-top: 100px"></md-progress-circular>
-    </div>
+    </div>-->
 		
 		<!--<input style="display: none" id="finishLoading" ng-model="finishLoading"></input>-->
 		
