Quick Orthographic fixes

--- a/projects/IHM/app/homeMenu/homeMenu.html
+++ b/projects/IHM/app/homeMenu/homeMenu.html
@@ -19,7 +19,7 @@
 		</p>
 		<h2>Comment utiliser ETOILE ?</h2>
 		<p>
-			Importez un fichier de configuration via le menu de gauche, ou utilisez les onglets pour entrer la configuration de votre établissement. Les trois onglets vous permettent de configurer :
+			Importez un fichier de configuration via le menu de gauche, ou utilisez les onglets pour entrer la configuration de votre établissement. Les quatres onglets vous proposent les fonctionnalités suivantes :
 			<ul>
 		<li>Accueil : permet de générer un emploi du temps et d'importer/exporter des fichiers de configuration</li>
 		<li>Établissement : permet de définir les horaires des cours et les salles disponibles</li>
