--- a/projects/IHM/app/programmeMenu/gradeClassesTab/gradeClassesTab.html
+++ b/projects/IHM/app/programmeMenu/gradeClassesTab/gradeClassesTab.html
@@ -5,7 +5,7 @@
 	<p>Sur cette page, vous pouvez définir des groupes d'élèves.
 	  <br/>Dans un premier temps, définissez des niveaux qui correspondent à des types de classe et des programmes scolaires. Par exemple : 3ème générale, 1ère S-SVT...
 	  <br/>Ensuite, définissez les différentes classes de ces niveaux, avec leur effectif. Cet effectif permettra d'organiser les cours dans des salles dimensionnées correctement.
-    Si l'effectif est à 0, il n'y aura pas de vérification entre l'effectif de la classe et la capacité de la salle.
+    Il est possible de laisser l'effectif à 0, auquel cas il n'y aura pas de vérification entre l'effectif de la classe et la capacité de la salle.
 	  </p>
 
 	<div ng-controller="gradeClassesTabCtrl">
