--- a/projects/IHM/app/programmeMenu/programmeTab/programmeTab.html
+++ b/projects/IHM/app/programmeMenu/programmeTab/programmeTab.html
@@ -4,7 +4,7 @@
 
 <div ng-controller="programmeTabCtrl">
   <p>
-    Rentrez, pour chaque niveau et matières, le nombre de crénaux horaires hebdomadaires de cette matière pour ce niveau.
+    Rentrez, pour chaque niveau et matières, le nombre de créneaux horaires hebdomadaires associés à cette matière pour ce niveau.
     <br/><br/>Exemple : 3ème, Français 3h, Maths 3h, EPS 2h...
   </p>
 
