--- a/projects/IHM/app/programmeMenu/subjectsTab/subjectsTab.html
+++ b/projects/IHM/app/programmeMenu/subjectsTab/subjectsTab.html
@@ -3,7 +3,7 @@
 	<h3>Matières</h3>
 
 <p>
-  Définissez les matières enseignées dans votre établissement. Chacune d'entre elles est associé à un type de salle dans lequel le cours peut avoir lieu.
+  Définissez les matières enseignées dans votre établissement. Chacune d'entre elles est associé au type de salle dans lequel le cours doit avoir lieu.
   <br/><br/>Exemple : TP de Physique, type de salle : TP-Physique
 </p>
 
