--- a/projects/IHM/app/teacherMenu/attributionTab/attributionTab.html
+++ b/projects/IHM/app/teacherMenu/attributionTab/attributionTab.html
@@ -5,7 +5,7 @@
     <h3>Attribution des Professeurs aux Classes</h3>
 
     <p>
-      Sélectionner l'enseignant de chaque groupe pour chaque matière.
+      Sélectionnea l'enseignant attribué à chaque classe pour chaque matière.
     </p>
 
     <table id="attributionTable" class="framedTable">
