--- a/projects/IHM/app/teacherMenu/teacherTab/teacherTab.html
+++ b/projects/IHM/app/teacherMenu/teacherTab/teacherTab.html
@@ -5,7 +5,7 @@
     <h3>Professeurs</h3>
 
     <p>
-      Définissez pour chaque enseignant la ou les matières enseignées et ses disponibilités.
+      Définissez pour chaque enseignant la ou les matières qu'il enseigne et ses disponibilités horaires.
       <br/><br/>Exemple : John Smith, Matières : Mathématiques - Physique - Chimie, Disponibilités : tout sauf mercredi. </p>
 
     <table id="teacherTab" class="framedTable">
