--- a/projects/IHM/app/schoolInformationMenu/roomTab/roomTab.html
+++ b/projects/IHM/app/schoolInformationMenu/roomTab/roomTab.html
@@ -5,8 +5,8 @@
 
   <h3>Salles</h3>
   <p>
-    Ajoutez/modifiez des salles à votre établissement. Chaque salle a un nom, un type tel que défini dans l'onglet "Type de salles", et
-    une capacité correspondant aux nombre d'étudiants maximum pouvant suivre un cours dans cette salle. La capacité est facultative
+    Ajoutez/enlevez des salles à votre établissement. Chaque salle a un nom, un type - parmi ceux défini dans l'onglet "Type de salles" -, et
+    une capacité correspondant au nombre maximum d'étudiants pouvant suivre un cours dans cette salle. La capacité est facultative
     (vous pouvez la mettre à zéro pour ignorer le champ).
     <br/> Il est possible de mettre plusieurs types pour une même salle.
     <br/><br/>Exemple : C121, type: TP-Physique, capacité : 25
