petit message cool

--- a/projects/IHM/app/anchoredParts/body.html
+++ b/projects/IHM/app/anchoredParts/body.html
@@ -92,8 +92,10 @@
     </div>-->
 		
 		<!--<input style="display: none" id="finishLoading" ng-model="finishLoading"></input>-->
+
+    <div id="quietInfo" class="quietInfo"></div>
 		
-    </div>
+</div>
 	
 	<!--<script>
 		$("#finishLoading").val("finish");
