display generated timetable

--- a/projects/resources/output/timetables/lycee_giel/lycee_giel_teachers_free_periods_days_horizontal.html
+++ b/projects/resources/output/timetables/lycee_giel/lycee_giel_teachers_free_periods_days_horizontal.html
@@ -49,41 +49,41 @@
       <tbody>
         <tr>
           <th class="yAxis">8h - 9h</th>
+          <td><div class="DESCRIPTION">Doit venir plus tôt:</div>François Fillon<br />Moi Même<br /></td>
+          <td><div class="DESCRIPTION">Doit venir beaucoup plus tôt:</div>Moi Même<br /></td>
           <td>---</td>
-          <td><div class="DESCRIPTION">Doit venir plus tôt:</div>Moi Même<br /><div class="DESCRIPTION">Doit venir beaucoup plus tôt:</div>François Fillon<br /></td>
-          <td>---</td>
-          <td>---</td>
-          <td><div class="DESCRIPTION">Doit venir plus tôt:</div>Marc Dupont<br /><div class="DESCRIPTION">Jour libre:</div>Moi Même<br /></td>
+          <td><div class="DESCRIPTION">Doit venir beaucoup plus tôt:</div>Moi Même<br /></td>
+          <td><div class="DESCRIPTION">Doit venir plus tôt:</div>François Fillon<br /></td>
           <td>---</td>
         </tr>
         <tr>
           <th class="yAxis">9h - 10h</th>
-          <td><div class="DESCRIPTION">Vide simple:</div>François Fillon<br /><div class="DESCRIPTION">Doit rester plus longtemps:</div>Moi Même<br /></td>
-          <td><div class="DESCRIPTION">Doit venir plus tôt:</div>François Fillon<br /></td>
-          <td><div class="DESCRIPTION">Doit rester plus longtemps:</div>Moi Même<br /></td>
           <td>---</td>
-          <td><div class="DESCRIPTION">Doit rester plus longtemps:</div>François Fillon<br /><div class="DESCRIPTION">Jour libre:</div>Moi Même<br /></td>
+          <td><div class="DESCRIPTION">Doit venir beaucoup plus tôt:</div>Moi Même<br /></td>
+          <td><div class="DESCRIPTION">Doit rester plus longtemps:</div>Marc Dupont<br /></td>
+          <td><div class="DESCRIPTION">Doit venir plus tôt:</div>Moi Même<br /></td>
+          <td>---</td>
           <td>---</td>
         </tr>
         <tr>
           <th class="yAxis">14h - 15h</th>
-          <td><div class="DESCRIPTION">Doit rester beaucoup plus longtemps:</div>Moi Même<br /></td>
+          <td><div class="DESCRIPTION">Vide simple:</div>François Fillon<br /><div class="DESCRIPTION">Doit rester plus longtemps:</div>Moi Même<br /></td>
+          <td><div class="DESCRIPTION">Doit venir plus tôt:</div>Moi Même<br /></td>
           <td>---</td>
-          <td>---</td>
-          <td>---</td>
+          <td><div class="DESCRIPTION">Vide simple:</div>François Fillon<br /></td>
           <td><div class="DESCRIPTION">Pas disponible:</div>François Fillon<br />Moi Même<br />Marc Dupont<br /></td>
           <td>---</td>
         </tr>
         <tr>
           <th class="yAxis">15h - 16h</th>
           <td><div class="DESCRIPTION">Doit rester beaucoup plus longtemps:</div>Moi Même<br /></td>
-          <td><div class="DESCRIPTION">Doit rester plus longtemps:</div>Moi Même<br /></td>
+          <td>---</td>
           <td>---</td>
           <td>---</td>
           <td><div class="DESCRIPTION">Pas disponible:</div>François Fillon<br />Moi Même<br />Marc Dupont<br /></td>
           <td>---</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="6">Planning généré avec FET 5.31.4 le 04/05/2017 09:13</td></tr>
+        <tr class="foot"><td></td><td colspan="6">Planning généré avec FET 5.31.4 le 04/05/2017 09:38</td></tr>
       </tbody>
     </table>
 
