--- a/projects/resources/output/timetables/lycee_giel/lycee_giel_years_time_horizontal.html
+++ b/projects/resources/output/timetables/lycee_giel/lycee_giel_years_time_horizontal.html
@@ -44,24 +44,24 @@
       <tbody>
         <tr>
           <th class="yAxis">3e</th>
-          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">TP de physique</td></tr><tr><td class="detailed">Moi Même</td></tr><tr><td class="detailed">B106</td></tr></table></td>
-          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A101</td></tr></table></td>
+          <td>---</td>
+          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A102</td></tr></table></td>
+          <td>---</td>
           <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A102</td></tr></table></td>
-          <td>---</td>
-          <td>---</td>
+          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">Musique</td></tr><tr><td class="detailed">François Fillon</td></tr><tr><td class="detailed">A102</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A101</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A101</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A101</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">TP de physique</td></tr><tr><td class="detailed">Moi Même</td></tr><tr><td class="detailed">B106</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Musique</td></tr><tr><td class="detailed">François Fillon</td></tr><tr><td class="detailed">A101</td></tr></table></td>
+          <td>-X-</td>
+          <td>-X-</td>
+          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A102</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A102</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">TP de physique</td></tr><tr><td class="detailed">Moi Même</td></tr><tr><td class="detailed">B106</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">TP de physique</td></tr><tr><td class="detailed">Moi Même</td></tr><tr><td class="detailed">B106</td></tr></table></td>
           <td>---</td>
           <td><table class="detailed"><tr><td class="detailed">3e - A</td><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td><td class="detailed">TP de physique</td></tr><tr><td class="detailed">Marc Dupont</td><td class="detailed">Moi Même</td></tr><tr><td class="detailed">A102</td><td class="detailed">B106</td></tr></table></td>
-          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A101</td></tr></table></td>
-          <td><table class="detailed"><tr><td class="detailed">3e - A</td><td class="detailed">3e - B</td></tr><tr><td class="detailed">Musique</td><td class="detailed">TP de physique</td></tr><tr><td class="detailed">François Fillon</td><td class="detailed">Moi Même</td></tr><tr><td class="detailed">A101</td><td class="detailed">B106</td></tr></table></td>
-          <td>---</td>
-          <td>-X-</td>
-          <td>-X-</td>
-          <td><table class="detailed"><tr><td class="detailed">3e - A</td><td class="detailed">3e - B</td></tr><tr><td class="detailed">TP de physique</td><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Moi Même</td><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">B106</td><td class="detailed">A101</td></tr></table></td>
-          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A102</td></tr></table></td>
-          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A101</td></tr></table></td>
-          <td><table class="detailed"><tr><td class="detailed">3e - A</td><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td><td class="detailed">Musique</td></tr><tr><td class="detailed">Marc Dupont</td><td class="detailed">François Fillon</td></tr><tr><td class="detailed">A102</td><td class="detailed">A101</td></tr></table></td>
-          <td>---</td>
-          <td>---</td>
           <td>---</td>
           <td>---</td>
           <td>-X-</td>
@@ -71,24 +71,24 @@
         </tr>
         <tr>
           <th class="yAxis">4e</th>
-          <td>4e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
-          <td>---</td>
-          <td>---</td>
-          <td>4e - A<br />Musique<br />François Fillon<br />A102<br /></td>
           <td>4e - A<br />Mathématiques<br />Marc Dupont<br />A101<br /></td>
           <td>4e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
           <td>---</td>
+          <td>4e - A<br />Musique<br />François Fillon<br />A101<br /></td>
+          <td>---</td>
+          <td>---</td>
+          <td>---</td>
+          <td>4e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
+          <td>4e - A<br />Musique<br />François Fillon<br />A101<br /></td>
+          <td>---</td>
+          <td>-X-</td>
+          <td>-X-</td>
+          <td>4e - A<br />Musique<br />François Fillon<br />A101<br /></td>
+          <td>---</td>
+          <td>4e - A<br />Mathématiques<br />Marc Dupont<br />A101<br /></td>
           <td>4e - A<br />Musique<br />François Fillon<br />A102<br /></td>
           <td>4e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
           <td>4e - A<br />Musique<br />François Fillon<br />A101<br /></td>
-          <td>-X-</td>
-          <td>-X-</td>
-          <td>4e - A<br />Musique<br />François Fillon<br />A102<br /></td>
-          <td>4e - A<br />Musique<br />François Fillon<br />A101<br /></td>
-          <td>4e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
-          <td>---</td>
-          <td>---</td>
-          <td>---</td>
           <td>---</td>
           <td>---</td>
           <td>-X-</td>
@@ -98,24 +98,24 @@
         </tr>
         <tr>
           <th class="yAxis">5e</th>
-          <td>5e - A<br />Musique<br />François Fillon<br />A101<br /></td>
           <td>---</td>
           <td>5e - A<br />Musique<br />François Fillon<br />A101<br /></td>
           <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A101<br /></td>
           <td>---</td>
+          <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A101<br /></td>
+          <td>5e - A<br />Musique<br />François Fillon<br />A102<br /></td>
+          <td>5e - A<br />Musique<br />François Fillon<br />A102<br /></td>
+          <td>5e - A<br />Musique<br />François Fillon<br />A102<br /></td>
           <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
+          <td>5e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
+          <td>-X-</td>
+          <td>-X-</td>
+          <td>---</td>
           <td>5e - A<br />Musique<br />François Fillon<br />A101<br /></td>
           <td>---</td>
-          <td>---</td>
-          <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
-          <td>-X-</td>
-          <td>-X-</td>
-          <td>---</td>
+          <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A101<br /></td>
           <td>5e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
-          <td>5e - A<br />Musique<br />François Fillon<br />A102<br /></td>
-          <td>5e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
-          <td>5e - A<br />Musique<br />François Fillon<br />A102<br /></td>
-          <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
+          <td>---</td>
           <td>---</td>
           <td>---</td>
           <td>-X-</td>
@@ -150,7 +150,7 @@
           <td>-X-</td>
           <td>-X-</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="24">Planning généré avec FET 5.31.4 le 04/05/2017 09:13</td></tr>
+        <tr class="foot"><td></td><td colspan="24">Planning généré avec FET 5.31.4 le 04/05/2017 09:38</td></tr>
       </tbody>
     </table>
 
