--- a/projects/resources/output/timetables/lycee_giel/lycee_giel_teachers_free_periods_days_vertical.html
+++ b/projects/resources/output/timetables/lycee_giel/lycee_giel_teachers_free_periods_days_vertical.html
@@ -47,36 +47,36 @@
       <tbody>
         <tr>
           <th class="yAxis">Lundi</th>
+          <td><div class="DESCRIPTION">Doit venir plus tôt:</div>François Fillon<br />Moi Même<br /></td>
           <td>---</td>
           <td><div class="DESCRIPTION">Vide simple:</div>François Fillon<br /><div class="DESCRIPTION">Doit rester plus longtemps:</div>Moi Même<br /></td>
-          <td><div class="DESCRIPTION">Doit rester beaucoup plus longtemps:</div>Moi Même<br /></td>
           <td><div class="DESCRIPTION">Doit rester beaucoup plus longtemps:</div>Moi Même<br /></td>
         </tr>
         <tr>
           <th class="yAxis">Mardi</th>
-          <td><div class="DESCRIPTION">Doit venir plus tôt:</div>Moi Même<br /><div class="DESCRIPTION">Doit venir beaucoup plus tôt:</div>François Fillon<br /></td>
-          <td><div class="DESCRIPTION">Doit venir plus tôt:</div>François Fillon<br /></td>
+          <td><div class="DESCRIPTION">Doit venir beaucoup plus tôt:</div>Moi Même<br /></td>
+          <td><div class="DESCRIPTION">Doit venir beaucoup plus tôt:</div>Moi Même<br /></td>
+          <td><div class="DESCRIPTION">Doit venir plus tôt:</div>Moi Même<br /></td>
           <td>---</td>
-          <td><div class="DESCRIPTION">Doit rester plus longtemps:</div>Moi Même<br /></td>
         </tr>
         <tr>
           <th class="yAxis">Mercredi</th>
           <td>---</td>
-          <td><div class="DESCRIPTION">Doit rester plus longtemps:</div>Moi Même<br /></td>
+          <td><div class="DESCRIPTION">Doit rester plus longtemps:</div>Marc Dupont<br /></td>
           <td>---</td>
           <td>---</td>
         </tr>
         <tr>
           <th class="yAxis">Jeudi</th>
-          <td>---</td>
-          <td>---</td>
-          <td>---</td>
+          <td><div class="DESCRIPTION">Doit venir beaucoup plus tôt:</div>Moi Même<br /></td>
+          <td><div class="DESCRIPTION">Doit venir plus tôt:</div>Moi Même<br /></td>
+          <td><div class="DESCRIPTION">Vide simple:</div>François Fillon<br /></td>
           <td>---</td>
         </tr>
         <tr>
           <th class="yAxis">Vendredi</th>
-          <td><div class="DESCRIPTION">Doit venir plus tôt:</div>Marc Dupont<br /><div class="DESCRIPTION">Jour libre:</div>Moi Même<br /></td>
-          <td><div class="DESCRIPTION">Doit rester plus longtemps:</div>François Fillon<br /><div class="DESCRIPTION">Jour libre:</div>Moi Même<br /></td>
+          <td><div class="DESCRIPTION">Doit venir plus tôt:</div>François Fillon<br /></td>
+          <td>---</td>
           <td><div class="DESCRIPTION">Pas disponible:</div>François Fillon<br />Moi Même<br />Marc Dupont<br /></td>
           <td><div class="DESCRIPTION">Pas disponible:</div>François Fillon<br />Moi Même<br />Marc Dupont<br /></td>
         </tr>
@@ -87,7 +87,7 @@
           <td>---</td>
           <td>---</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="4">Planning généré avec FET 5.31.4 le 04/05/2017 09:13</td></tr>
+        <tr class="foot"><td></td><td colspan="4">Planning généré avec FET 5.31.4 le 04/05/2017 09:38</td></tr>
       </tbody>
     </table>
 
