--- a/projects/resources/output/timetables/lycee_giel/lycee_giel_years_days_horizontal.html
+++ b/projects/resources/output/timetables/lycee_giel/lycee_giel_years_days_horizontal.html
@@ -55,41 +55,41 @@
       <tbody>
         <tr>
           <th class="yAxis">8h - 9h</th>
+          <td>---</td>
+          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">Musique</td></tr><tr><td class="detailed">François Fillon</td></tr><tr><td class="detailed">A102</td></tr></table></td>
           <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">TP de physique</td></tr><tr><td class="detailed">Moi Même</td></tr><tr><td class="detailed">B106</td></tr></table></td>
-          <td>---</td>
-          <td><table class="detailed"><tr><td class="detailed">3e - A</td><td class="detailed">3e - B</td></tr><tr><td class="detailed">Musique</td><td class="detailed">TP de physique</td></tr><tr><td class="detailed">François Fillon</td><td class="detailed">Moi Même</td></tr><tr><td class="detailed">A101</td><td class="detailed">B106</td></tr></table></td>
-          <td><table class="detailed"><tr><td class="detailed">3e - A</td><td class="detailed">3e - B</td></tr><tr><td class="detailed">TP de physique</td><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Moi Même</td><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">B106</td><td class="detailed">A101</td></tr></table></td>
-          <td>---</td>
-          <td>-X-</td>
-        </tr>
-        <tr>
-          <th class="yAxis">9h - 10h</th>
-          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A101</td></tr></table></td>
-          <td>---</td>
-          <td>---</td>
           <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A102</td></tr></table></td>
           <td>---</td>
           <td>-X-</td>
         </tr>
         <tr>
-          <th class="yAxis">14h - 15h</th>
-          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A102</td></tr></table></td>
+          <th class="yAxis">9h - 10h</th>
+          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A102</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A101</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Musique</td></tr><tr><td class="detailed">François Fillon</td></tr><tr><td class="detailed">A101</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A102</td></tr></table></td>
           <td><table class="detailed"><tr><td class="detailed">3e - A</td><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td><td class="detailed">TP de physique</td></tr><tr><td class="detailed">Marc Dupont</td><td class="detailed">Moi Même</td></tr><tr><td class="detailed">A102</td><td class="detailed">B106</td></tr></table></td>
           <td>-X-</td>
+        </tr>
+        <tr>
+          <th class="yAxis">14h - 15h</th>
+          <td>---</td>
           <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A101</td></tr></table></td>
+          <td>-X-</td>
+          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">TP de physique</td></tr><tr><td class="detailed">Moi Même</td></tr><tr><td class="detailed">B106</td></tr></table></td>
           <td>---</td>
           <td>-X-</td>
         </tr>
         <tr>
           <th class="yAxis">15h - 16h</th>
-          <td>---</td>
+          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A102</td></tr></table></td>
           <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A101</td></tr></table></td>
           <td>-X-</td>
-          <td><table class="detailed"><tr><td class="detailed">3e - A</td><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td><td class="detailed">Musique</td></tr><tr><td class="detailed">Marc Dupont</td><td class="detailed">François Fillon</td></tr><tr><td class="detailed">A102</td><td class="detailed">A101</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">TP de physique</td></tr><tr><td class="detailed">Moi Même</td></tr><tr><td class="detailed">B106</td></tr></table></td>
           <td>---</td>
           <td>-X-</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="6">Planning généré avec FET 5.31.4 le 04/05/2017 09:13</td></tr>
+        <tr class="foot"><td></td><td colspan="6">Planning généré avec FET 5.31.4 le 04/05/2017 09:38</td></tr>
       </tbody>
     </table>
 
@@ -112,20 +112,20 @@
       <tbody>
         <tr>
           <th class="yAxis">8h - 9h</th>
-          <td>4e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
           <td>4e - A<br />Mathématiques<br />Marc Dupont<br />A101<br /></td>
-          <td>4e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
-          <td>4e - A<br />Musique<br />François Fillon<br />A102<br /></td>
           <td>---</td>
+          <td>4e - A<br />Musique<br />François Fillon<br />A101<br /></td>
+          <td>4e - A<br />Musique<br />François Fillon<br />A101<br /></td>
+          <td>4e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
           <td>-X-</td>
         </tr>
         <tr>
           <th class="yAxis">9h - 10h</th>
-          <td>---</td>
           <td>4e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
-          <td>4e - A<br />Musique<br />François Fillon<br />A101<br /></td>
-          <td>4e - A<br />Musique<br />François Fillon<br />A101<br /></td>
           <td>---</td>
+          <td>---</td>
+          <td>---</td>
+          <td>4e - A<br />Musique<br />François Fillon<br />A101<br /></td>
           <td>-X-</td>
         </tr>
         <tr>
@@ -133,20 +133,20 @@
           <td>---</td>
           <td>---</td>
           <td>-X-</td>
-          <td>4e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
+          <td>4e - A<br />Mathématiques<br />Marc Dupont<br />A101<br /></td>
           <td>---</td>
           <td>-X-</td>
         </tr>
         <tr>
           <th class="yAxis">15h - 16h</th>
-          <td>4e - A<br />Musique<br />François Fillon<br />A102<br /></td>
-          <td>4e - A<br />Musique<br />François Fillon<br />A102<br /></td>
+          <td>4e - A<br />Musique<br />François Fillon<br />A101<br /></td>
+          <td>4e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
           <td>-X-</td>
-          <td>---</td>
+          <td>4e - A<br />Musique<br />François Fillon<br />A102<br /></td>
           <td>---</td>
           <td>-X-</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="6">Planning généré avec FET 5.31.4 le 04/05/2017 09:13</td></tr>
+        <tr class="foot"><td></td><td colspan="6">Planning généré avec FET 5.31.4 le 04/05/2017 09:38</td></tr>
       </tbody>
     </table>
 
@@ -169,41 +169,41 @@
       <tbody>
         <tr>
           <th class="yAxis">8h - 9h</th>
-          <td>5e - A<br />Musique<br />François Fillon<br />A101<br /></td>
           <td>---</td>
+          <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A101<br /></td>
+          <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
           <td>---</td>
-          <td>---</td>
-          <td>5e - A<br />Musique<br />François Fillon<br />A102<br /></td>
+          <td>5e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
           <td>-X-</td>
         </tr>
         <tr>
           <th class="yAxis">9h - 10h</th>
-          <td>---</td>
-          <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
-          <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
+          <td>5e - A<br />Musique<br />François Fillon<br />A101<br /></td>
+          <td>5e - A<br />Musique<br />François Fillon<br />A102<br /></td>
           <td>5e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
-          <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
+          <td>5e - A<br />Musique<br />François Fillon<br />A101<br /></td>
+          <td>---</td>
           <td>-X-</td>
         </tr>
         <tr>
           <th class="yAxis">14h - 15h</th>
-          <td>5e - A<br />Musique<br />François Fillon<br />A101<br /></td>
-          <td>5e - A<br />Musique<br />François Fillon<br />A101<br /></td>
-          <td>-X-</td>
+          <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A101<br /></td>
           <td>5e - A<br />Musique<br />François Fillon<br />A102<br /></td>
+          <td>-X-</td>
+          <td>---</td>
           <td>---</td>
           <td>-X-</td>
         </tr>
         <tr>
           <th class="yAxis">15h - 16h</th>
+          <td>---</td>
+          <td>5e - A<br />Musique<br />François Fillon<br />A102<br /></td>
+          <td>-X-</td>
           <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A101<br /></td>
           <td>---</td>
           <td>-X-</td>
-          <td>5e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
-          <td>---</td>
-          <td>-X-</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="6">Planning généré avec FET 5.31.4 le 04/05/2017 09:13</td></tr>
+        <tr class="foot"><td></td><td colspan="6">Planning généré avec FET 5.31.4 le 04/05/2017 09:38</td></tr>
       </tbody>
     </table>
 
@@ -260,7 +260,7 @@
           <td>---</td>
           <td>-X-</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="6">Planning généré avec FET 5.31.4 le 04/05/2017 09:13</td></tr>
+        <tr class="foot"><td></td><td colspan="6">Planning généré avec FET 5.31.4 le 04/05/2017 09:38</td></tr>
       </tbody>
     </table>
 
