--- a/projects/resources/output/timetables/lycee_giel/lycee_giel_years_days_vertical.html
+++ b/projects/resources/output/timetables/lycee_giel/lycee_giel_years_days_vertical.html
@@ -53,36 +53,36 @@
       <tbody>
         <tr>
           <th class="yAxis">Lundi</th>
-          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">TP de physique</td></tr><tr><td class="detailed">Moi Même</td></tr><tr><td class="detailed">B106</td></tr></table></td>
-          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A101</td></tr></table></td>
-          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A102</td></tr></table></td>
           <td>---</td>
+          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A102</td></tr></table></td>
+          <td>---</td>
+          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A102</td></tr></table></td>
         </tr>
         <tr>
           <th class="yAxis">Mardi</th>
-          <td>---</td>
-          <td>---</td>
-          <td><table class="detailed"><tr><td class="detailed">3e - A</td><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td><td class="detailed">TP de physique</td></tr><tr><td class="detailed">Marc Dupont</td><td class="detailed">Moi Même</td></tr><tr><td class="detailed">A102</td><td class="detailed">B106</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">Musique</td></tr><tr><td class="detailed">François Fillon</td></tr><tr><td class="detailed">A102</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A101</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A101</td></tr></table></td>
           <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A101</td></tr></table></td>
         </tr>
         <tr>
           <th class="yAxis">Mercredi</th>
-          <td><table class="detailed"><tr><td class="detailed">3e - A</td><td class="detailed">3e - B</td></tr><tr><td class="detailed">Musique</td><td class="detailed">TP de physique</td></tr><tr><td class="detailed">François Fillon</td><td class="detailed">Moi Même</td></tr><tr><td class="detailed">A101</td><td class="detailed">B106</td></tr></table></td>
-          <td>---</td>
+          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">TP de physique</td></tr><tr><td class="detailed">Moi Même</td></tr><tr><td class="detailed">B106</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Musique</td></tr><tr><td class="detailed">François Fillon</td></tr><tr><td class="detailed">A101</td></tr></table></td>
           <td>-X-</td>
           <td>-X-</td>
         </tr>
         <tr>
           <th class="yAxis">Jeudi</th>
-          <td><table class="detailed"><tr><td class="detailed">3e - A</td><td class="detailed">3e - B</td></tr><tr><td class="detailed">TP de physique</td><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Moi Même</td><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">B106</td><td class="detailed">A101</td></tr></table></td>
           <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A102</td></tr></table></td>
-          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A101</td></tr></table></td>
-          <td><table class="detailed"><tr><td class="detailed">3e - A</td><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td><td class="detailed">Musique</td></tr><tr><td class="detailed">Marc Dupont</td><td class="detailed">François Fillon</td></tr><tr><td class="detailed">A102</td><td class="detailed">A101</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A102</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">TP de physique</td></tr><tr><td class="detailed">Moi Même</td></tr><tr><td class="detailed">B106</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">TP de physique</td></tr><tr><td class="detailed">Moi Même</td></tr><tr><td class="detailed">B106</td></tr></table></td>
         </tr>
         <tr>
           <th class="yAxis">Vendredi</th>
           <td>---</td>
-          <td>---</td>
+          <td><table class="detailed"><tr><td class="detailed">3e - A</td><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td><td class="detailed">TP de physique</td></tr><tr><td class="detailed">Marc Dupont</td><td class="detailed">Moi Même</td></tr><tr><td class="detailed">A102</td><td class="detailed">B106</td></tr></table></td>
           <td>---</td>
           <td>---</td>
         </tr>
@@ -93,7 +93,7 @@
           <td>-X-</td>
           <td>-X-</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="4">Planning généré avec FET 5.31.4 le 04/05/2017 09:13</td></tr>
+        <tr class="foot"><td></td><td colspan="4">Planning généré avec FET 5.31.4 le 04/05/2017 09:38</td></tr>
       </tbody>
     </table>
 
@@ -114,36 +114,36 @@
       <tbody>
         <tr>
           <th class="yAxis">Lundi</th>
-          <td>4e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
-          <td>---</td>
-          <td>---</td>
-          <td>4e - A<br />Musique<br />François Fillon<br />A102<br /></td>
-        </tr>
-        <tr>
-          <th class="yAxis">Mardi</th>
           <td>4e - A<br />Mathématiques<br />Marc Dupont<br />A101<br /></td>
           <td>4e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
           <td>---</td>
-          <td>4e - A<br />Musique<br />François Fillon<br />A102<br /></td>
+          <td>4e - A<br />Musique<br />François Fillon<br />A101<br /></td>
+        </tr>
+        <tr>
+          <th class="yAxis">Mardi</th>
+          <td>---</td>
+          <td>---</td>
+          <td>---</td>
+          <td>4e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
         </tr>
         <tr>
           <th class="yAxis">Mercredi</th>
-          <td>4e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
           <td>4e - A<br />Musique<br />François Fillon<br />A101<br /></td>
+          <td>---</td>
           <td>-X-</td>
           <td>-X-</td>
         </tr>
         <tr>
           <th class="yAxis">Jeudi</th>
-          <td>4e - A<br />Musique<br />François Fillon<br />A102<br /></td>
           <td>4e - A<br />Musique<br />François Fillon<br />A101<br /></td>
-          <td>4e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
           <td>---</td>
+          <td>4e - A<br />Mathématiques<br />Marc Dupont<br />A101<br /></td>
+          <td>4e - A<br />Musique<br />François Fillon<br />A102<br /></td>
         </tr>
         <tr>
           <th class="yAxis">Vendredi</th>
-          <td>---</td>
-          <td>---</td>
+          <td>4e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
+          <td>4e - A<br />Musique<br />François Fillon<br />A101<br /></td>
           <td>---</td>
           <td>---</td>
         </tr>
@@ -154,7 +154,7 @@
           <td>-X-</td>
           <td>-X-</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="4">Planning généré avec FET 5.31.4 le 04/05/2017 09:13</td></tr>
+        <tr class="foot"><td></td><td colspan="4">Planning généré avec FET 5.31.4 le 04/05/2017 09:38</td></tr>
       </tbody>
     </table>
 
@@ -175,36 +175,36 @@
       <tbody>
         <tr>
           <th class="yAxis">Lundi</th>
-          <td>5e - A<br />Musique<br />François Fillon<br />A101<br /></td>
           <td>---</td>
           <td>5e - A<br />Musique<br />François Fillon<br />A101<br /></td>
           <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A101<br /></td>
+          <td>---</td>
         </tr>
         <tr>
           <th class="yAxis">Mardi</th>
-          <td>---</td>
-          <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
-          <td>5e - A<br />Musique<br />François Fillon<br />A101<br /></td>
-          <td>---</td>
+          <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A101<br /></td>
+          <td>5e - A<br />Musique<br />François Fillon<br />A102<br /></td>
+          <td>5e - A<br />Musique<br />François Fillon<br />A102<br /></td>
+          <td>5e - A<br />Musique<br />François Fillon<br />A102<br /></td>
         </tr>
         <tr>
           <th class="yAxis">Mercredi</th>
-          <td>---</td>
           <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
+          <td>5e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
           <td>-X-</td>
           <td>-X-</td>
         </tr>
         <tr>
           <th class="yAxis">Jeudi</th>
           <td>---</td>
-          <td>5e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
-          <td>5e - A<br />Musique<br />François Fillon<br />A102<br /></td>
-          <td>5e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
+          <td>5e - A<br />Musique<br />François Fillon<br />A101<br /></td>
+          <td>---</td>
+          <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A101<br /></td>
         </tr>
         <tr>
           <th class="yAxis">Vendredi</th>
-          <td>5e - A<br />Musique<br />François Fillon<br />A102<br /></td>
-          <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
+          <td>5e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
+          <td>---</td>
           <td>---</td>
           <td>---</td>
         </tr>
@@ -215,7 +215,7 @@
           <td>-X-</td>
           <td>-X-</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="4">Planning généré avec FET 5.31.4 le 04/05/2017 09:13</td></tr>
+        <tr class="foot"><td></td><td colspan="4">Planning généré avec FET 5.31.4 le 04/05/2017 09:38</td></tr>
       </tbody>
     </table>
 
@@ -276,7 +276,7 @@
           <td>-X-</td>
           <td>-X-</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="4">Planning généré avec FET 5.31.4 le 04/05/2017 09:13</td></tr>
+        <tr class="foot"><td></td><td colspan="4">Planning généré avec FET 5.31.4 le 04/05/2017 09:38</td></tr>
       </tbody>
     </table>
 
