--- a/projects/resources/output/timetables/lycee_giel/lycee_giel_years_time_vertical.html
+++ b/projects/resources/output/timetables/lycee_giel/lycee_giel_years_time_vertical.html
@@ -18,38 +18,6 @@
         <tr>
         <th rowspan="4">L<br />u<br />n<br />d<br />i<br /></th>
           <th class="yAxis">8h - 9h</th>
-          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">TP de physique</td></tr><tr><td class="detailed">Moi Même</td></tr><tr><td class="detailed">B106</td></tr></table></td>
-          <td>4e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
-          <td>5e - A<br />Musique<br />François Fillon<br />A101<br /></td>
-          <td>---</td>
-        </tr>
-        <tr>
-          <!-- span -->
-          <th class="yAxis">9h - 10h</th>
-          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A101</td></tr></table></td>
-          <td>---</td>
-          <td>---</td>
-          <td>---</td>
-        </tr>
-        <tr>
-          <!-- span -->
-          <th class="yAxis">14h - 15h</th>
-          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A102</td></tr></table></td>
-          <td>---</td>
-          <td>5e - A<br />Musique<br />François Fillon<br />A101<br /></td>
-          <td>---</td>
-        </tr>
-        <tr>
-          <!-- span -->
-          <th class="yAxis">15h - 16h</th>
-          <td>---</td>
-          <td>4e - A<br />Musique<br />François Fillon<br />A102<br /></td>
-          <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A101<br /></td>
-          <td>---</td>
-        </tr>
-        <tr>
-        <th rowspan="4">M<br />a<br />r<br />d<br />i<br /></th>
-          <th class="yAxis">8h - 9h</th>
           <td>---</td>
           <td>4e - A<br />Mathématiques<br />Marc Dupont<br />A101<br /></td>
           <td>---</td>
@@ -58,41 +26,73 @@
         <tr>
           <!-- span -->
           <th class="yAxis">9h - 10h</th>
-          <td>---</td>
+          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A102</td></tr></table></td>
           <td>4e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
-          <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
+          <td>5e - A<br />Musique<br />François Fillon<br />A101<br /></td>
           <td>---</td>
         </tr>
         <tr>
           <!-- span -->
           <th class="yAxis">14h - 15h</th>
-          <td><table class="detailed"><tr><td class="detailed">3e - A</td><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td><td class="detailed">TP de physique</td></tr><tr><td class="detailed">Marc Dupont</td><td class="detailed">Moi Même</td></tr><tr><td class="detailed">A102</td><td class="detailed">B106</td></tr></table></td>
           <td>---</td>
-          <td>5e - A<br />Musique<br />François Fillon<br />A101<br /></td>
+          <td>---</td>
+          <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A101<br /></td>
+          <td>---</td>
+        </tr>
+        <tr>
+          <!-- span -->
+          <th class="yAxis">15h - 16h</th>
+          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A102</td></tr></table></td>
+          <td>4e - A<br />Musique<br />François Fillon<br />A101<br /></td>
+          <td>---</td>
+          <td>---</td>
+        </tr>
+        <tr>
+        <th rowspan="4">M<br />a<br />r<br />d<br />i<br /></th>
+          <th class="yAxis">8h - 9h</th>
+          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">Musique</td></tr><tr><td class="detailed">François Fillon</td></tr><tr><td class="detailed">A102</td></tr></table></td>
+          <td>---</td>
+          <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A101<br /></td>
+          <td>---</td>
+        </tr>
+        <tr>
+          <!-- span -->
+          <th class="yAxis">9h - 10h</th>
+          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A101</td></tr></table></td>
+          <td>---</td>
+          <td>5e - A<br />Musique<br />François Fillon<br />A102<br /></td>
+          <td>---</td>
+        </tr>
+        <tr>
+          <!-- span -->
+          <th class="yAxis">14h - 15h</th>
+          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A101</td></tr></table></td>
+          <td>---</td>
+          <td>5e - A<br />Musique<br />François Fillon<br />A102<br /></td>
           <td>---</td>
         </tr>
         <tr>
           <!-- span -->
           <th class="yAxis">15h - 16h</th>
           <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A101</td></tr></table></td>
-          <td>4e - A<br />Musique<br />François Fillon<br />A102<br /></td>
-          <td>---</td>
+          <td>4e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
+          <td>5e - A<br />Musique<br />François Fillon<br />A102<br /></td>
           <td>---</td>
         </tr>
         <tr>
         <th rowspan="4">M<br />e<br />r<br />c<br />r<br />e<br />d<br />i<br /></th>
           <th class="yAxis">8h - 9h</th>
-          <td><table class="detailed"><tr><td class="detailed">3e - A</td><td class="detailed">3e - B</td></tr><tr><td class="detailed">Musique</td><td class="detailed">TP de physique</td></tr><tr><td class="detailed">François Fillon</td><td class="detailed">Moi Même</td></tr><tr><td class="detailed">A101</td><td class="detailed">B106</td></tr></table></td>
-          <td>4e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
-          <td>---</td>
+          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">TP de physique</td></tr><tr><td class="detailed">Moi Même</td></tr><tr><td class="detailed">B106</td></tr></table></td>
+          <td>4e - A<br />Musique<br />François Fillon<br />A101<br /></td>
+          <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
           <td>---</td>
         </tr>
         <tr>
           <!-- span -->
           <th class="yAxis">9h - 10h</th>
+          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Musique</td></tr><tr><td class="detailed">François Fillon</td></tr><tr><td class="detailed">A101</td></tr></table></td>
           <td>---</td>
-          <td>4e - A<br />Musique<br />François Fillon<br />A101<br /></td>
-          <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
+          <td>5e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
           <td>---</td>
         </tr>
         <tr>
@@ -114,8 +114,8 @@
         <tr>
         <th rowspan="4">J<br />e<br />u<br />d<br />i<br /></th>
           <th class="yAxis">8h - 9h</th>
-          <td><table class="detailed"><tr><td class="detailed">3e - A</td><td class="detailed">3e - B</td></tr><tr><td class="detailed">TP de physique</td><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Moi Même</td><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">B106</td><td class="detailed">A101</td></tr></table></td>
-          <td>4e - A<br />Musique<br />François Fillon<br />A102<br /></td>
+          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A102</td></tr></table></td>
+          <td>4e - A<br />Musique<br />François Fillon<br />A101<br /></td>
           <td>---</td>
           <td>---</td>
         </tr>
@@ -123,40 +123,40 @@
           <!-- span -->
           <th class="yAxis">9h - 10h</th>
           <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A102</td></tr></table></td>
-          <td>4e - A<br />Musique<br />François Fillon<br />A101<br /></td>
-          <td>5e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
+          <td>---</td>
+          <td>5e - A<br />Musique<br />François Fillon<br />A101<br /></td>
           <td>---</td>
         </tr>
         <tr>
           <!-- span -->
           <th class="yAxis">14h - 15h</th>
-          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td></tr><tr><td class="detailed">Marc Dupont</td></tr><tr><td class="detailed">A101</td></tr></table></td>
-          <td>4e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
-          <td>5e - A<br />Musique<br />François Fillon<br />A102<br /></td>
+          <td><table class="detailed"><tr><td class="detailed">3e - A</td></tr><tr><td class="detailed">TP de physique</td></tr><tr><td class="detailed">Moi Même</td></tr><tr><td class="detailed">B106</td></tr></table></td>
+          <td>4e - A<br />Mathématiques<br />Marc Dupont<br />A101<br /></td>
+          <td>---</td>
           <td>---</td>
         </tr>
         <tr>
           <!-- span -->
           <th class="yAxis">15h - 16h</th>
-          <td><table class="detailed"><tr><td class="detailed">3e - A</td><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td><td class="detailed">Musique</td></tr><tr><td class="detailed">Marc Dupont</td><td class="detailed">François Fillon</td></tr><tr><td class="detailed">A102</td><td class="detailed">A101</td></tr></table></td>
-          <td>---</td>
-          <td>5e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
+          <td><table class="detailed"><tr><td class="detailed">3e - B</td></tr><tr><td class="detailed">TP de physique</td></tr><tr><td class="detailed">Moi Même</td></tr><tr><td class="detailed">B106</td></tr></table></td>
+          <td>4e - A<br />Musique<br />François Fillon<br />A102<br /></td>
+          <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A101<br /></td>
           <td>---</td>
         </tr>
         <tr>
         <th rowspan="4">V<br />e<br />n<br />d<br />r<br />e<br />d<br />i<br /></th>
           <th class="yAxis">8h - 9h</th>
           <td>---</td>
-          <td>---</td>
-          <td>5e - A<br />Musique<br />François Fillon<br />A102<br /></td>
+          <td>4e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
+          <td>5e - A<br />TP de physique<br />Moi Même<br />B106<br /></td>
           <td>---</td>
         </tr>
         <tr>
           <!-- span -->
           <th class="yAxis">9h - 10h</th>
+          <td><table class="detailed"><tr><td class="detailed">3e - A</td><td class="detailed">3e - B</td></tr><tr><td class="detailed">Mathématiques</td><td class="detailed">TP de physique</td></tr><tr><td class="detailed">Marc Dupont</td><td class="detailed">Moi Même</td></tr><tr><td class="detailed">A102</td><td class="detailed">B106</td></tr></table></td>
+          <td>4e - A<br />Musique<br />François Fillon<br />A101<br /></td>
           <td>---</td>
-          <td>---</td>
-          <td>5e - A<br />Mathématiques<br />Marc Dupont<br />A102<br /></td>
           <td>---</td>
         </tr>
         <tr>
@@ -207,7 +207,7 @@
           <td>-X-</td>
           <td>-X-</td>
         </tr>
-        <tr class="foot"><td colspan="2"></td><td colspan="4">Planning généré avec FET 5.31.4 le 04/05/2017 09:13</td></tr>
+        <tr class="foot"><td colspan="2"></td><td colspan="4">Planning généré avec FET 5.31.4 le 04/05/2017 09:38</td></tr>
       </tbody>
     </table>
 
